Revision history for PerlX-QuoteOperator-URL

{{$NEXT}}

1.00  2015-02-23 18:58:11 GMT
        - Initial release
        - Ripped out of PerlX::QuoteOperator (at 0.05)