@@ -9,7 +9,8 @@ use LWP::Simple qw( get );
 my ($temp_fh, $temp_filename) = tempfile( 
     'Deleteme-Perl_QuoteOperator-URL-test-XXXX',
     TMPDIR => 1, 
-    UNLINK => 1 );
+    UNLINK => 1
+);
 print $temp_fh stuff();
 close $temp_fh;
 
@@ -33,23 +34,20 @@ SKIP: {
     my $example_org = undef;
 
     eval { 
-	$example_org = get( $example_url );
-	my $example_org_2 = get( $example_url );
+	    $example_org = get( $example_url );
+	    my $example_org_2 = get( $example_url );
 
-	unless ( defined( $example_org ) )
-	{
-	    die "GET $example_url failed, perhaps no internet connection available\n";
-	}
+        unless (defined( $example_org )) {
+            die "GET $example_url failed, perhaps no internet connection available\n";
+        }
 
-	unless ( $example_org =~ /\S/ )
-	{
-	    die "Example URL has no content, can not be used to test\n";
-	}
+        unless ($example_org =~ /\S/) {
+            die "Example URL has no content, can not be used to test\n";
+        }
 
-	unless ( $example_org eq $example_org_2 )
-	{
-	    die "Example URL has dynamic content, can not be used to test\n";
-	}
+        unless ($example_org eq $example_org_2) {
+            die "Example URL has dynamic content, can not be used to test\n";
+        }
     };
 
     diag "\n","Skipping web test\n",$@ if $@;
